--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html lang="ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta charset="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/nullstyle.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>MOVING</title>
+    </head>
+    <body>
+        <div class="wrapper">
+            <header class="header">
+                <div class="header__container">
+                    <a href="" class="header__logo">MOVING</a>
+                    <div class="header__menu menu">
+                        <nav class="menu__body">
+                            <ul class="menu__list">
+                                <li class="menu__item"><a href="" class="menu__link">Цены</a></li>
+                                <li class="menu__item"><a href="" class="menu__link">Автопарк</a></li>
+                                <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
+                                <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="header__phone">
+                        <a href="" class="phone__number">8(029)-999-12-13</a>
+                    </div>
+                    <div class="header__burger">
+                        <a href="" class="icon-menu"><span></span></a>
+                    </div>
+                </div>
+            </header>
+            <main class="main">
+            </main>
+            <footer class="footer">
+                footer
+            </footer>
+        </div>
+    </body>
 </html>
