--- a/index.html
+++ b/index.html
@@ -32,6 +32,40 @@
                 </div>
             </header>
             <main class="main">
+                <section class="banner">
+                    <div class="banner__container">
+                        <div class="banner__content">
+                            <h1 class="block-banner__title">Квартирные переезды</h1>
+                            <div class="block-banner__text">По Беларуси и СНГ</div>
+                            <div class="banner-block__button">
+                                <a href="" class="banner-button">Заказать</a>
+                                <div class="banner-border__button"></div>
+                            </div>
+                            <div class="delivery-info__icons">
+                                <div class="info-icon">
+                                    <img src="img/icons/truck.svg" alt="Машина" />
+                                </div>
+                                <div class="delivery-info__text">Более 800 переездов</div>
+
+                                <div class="info-icon">
+                                    <img src="img/icons/box.svg" alt="Коробка" />
+                                </div>
+                                <div class="delivery-info__text">Бережная упаковка</div>
+
+                                <div class="info-icon">
+                                    <img src="img/icons/money.svg" alt="Деньги" />
+                                </div>
+                                <div class="delivery-info__text">Фиксированная цена</div>
+                            </div>
+                            <div class="tablet-banner__image">
+                                <img src="img/banner/deliveryman_other_device.png" class="mobile-banner__image" alt=""/>
+                            </div>
+                        </div>
+                        <div class="banner__image">
+                            <img src="img/banner/deliveryman.png" alt=""/>
+                        </div>
+                    </div>
+                </section>
             </main>
             <footer class="footer">
                 footer
