--- a/index.html
+++ b/index.html
@@ -1,75 +1,146 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/nullstyle.css">
-        <link rel="stylesheet" href="css/style.css">
-        <title>MOVING</title>
-    </head>
-    <body>
-        <div class="wrapper">
-            <header class="header">
-                <div class="header__container">
-                    <a href="" class="header__logo">MOVING</a>
-                    <div class="header__menu menu">
-                        <nav class="menu__body">
-                            <ul class="menu__list">
-                                <li class="menu__item"><a href="" class="menu__link">Цены</a></li>
-                                <li class="menu__item"><a href="" class="menu__link">Автопарк</a></li>
-                                <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
-                                <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
-                            </ul>
-                        </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/nullstyle.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>MOVING</title>
+</head>
+<body>
+<div class="wrapper">
+    <header class="header">
+        <div class="header__container">
+            <a href="" class="header__logo">MOVING</a>
+            <div class="header__menu menu">
+                <nav class="menu__body">
+                    <ul class="menu__list">
+                        <li class="menu__item"><a href="" class="menu__link">Цены</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">Автопарк</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
+                        <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__phone">
+                <a href="" class="phone__number">8(029)-999-12-13</a>
+            </div>
+            <div class="header__burger">
+                <a href="" class="icon-menu"><span></span></a>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="banner">
+            <div class="banner__container">
+                <div class="banner__content">
+                    <h1 class="block-banner__title">Квартирные переезды</h1>
+                    <div class="block-banner__text">По Беларуси и СНГ</div>
+                    <div class="banner-block__button">
+                        <a href="" class="banner-button">Заказать</a>
+                        <div class="banner-border__button"></div>
                     </div>
-                    <div class="header__phone">
-                        <a href="" class="phone__number">8(029)-999-12-13</a>
+                    <div class="delivery-info__icons">
+                        <div class="info-icon">
+                            <img src="img/icons/banner/truck.svg" alt="Машина"/>
+                        </div>
+                        <div class="delivery-info__text">Более 800 переездов</div>
+
+                        <div class="info-icon">
+                            <img src="img/icons/banner/box.svg" alt="Коробка"/>
+                        </div>
+                        <div class="delivery-info__text">Бережная упаковка</div>
+
+                        <div class="info-icon">
+                            <img src="img/icons/banner/money.svg" alt="Деньги"/>
+                        </div>
+                        <div class="delivery-info__text">Фиксированная цена</div>
                     </div>
-                    <div class="header__burger">
-                        <a href="" class="icon-menu"><span></span></a>
+                    <div class="tablet-banner__image">
+                        <img src="img/banner/deliveryman_other_device.png" class="mobile-banner__image" alt=""/>
                     </div>
                 </div>
-            </header>
-            <main class="main">
-                <section class="banner">
-                    <div class="banner__container">
-                        <div class="banner__content">
-                            <h1 class="block-banner__title">Квартирные переезды</h1>
-                            <div class="block-banner__text">По Беларуси и СНГ</div>
-                            <div class="banner-block__button">
-                                <a href="" class="banner-button">Заказать</a>
-                                <div class="banner-border__button"></div>
-                            </div>
-                            <div class="delivery-info__icons">
-                                <div class="info-icon">
-                                    <img src="img/icons/truck.svg" alt="Машина" />
-                                </div>
-                                <div class="delivery-info__text">Более 800 переездов</div>
-
-                                <div class="info-icon">
-                                    <img src="img/icons/box.svg" alt="Коробка" />
-                                </div>
-                                <div class="delivery-info__text">Бережная упаковка</div>
-
-                                <div class="info-icon">
-                                    <img src="img/icons/money.svg" alt="Деньги" />
-                                </div>
-                                <div class="delivery-info__text">Фиксированная цена</div>
-                            </div>
-                            <div class="tablet-banner__image">
-                                <img src="img/banner/deliveryman_other_device.png" class="mobile-banner__image" alt=""/>
-                            </div>
+                <div class="banner__image">
+                    <img src="img/banner/deliveryman.png" alt=""/>
+                </div>
+            </div>
+        </section>
+        <section class="process-info">
+            <div class="process-info__container">
+                <h1 class="process-info__title">Как это происходит?</h1>
+                <div class="process-info__list">
+                    <div class="process-item">
+                        <div class="item-img">
+                            <img src="img/icons/nums/01.svg" class="item-desktop__img item-tablet__img item-mobile__img"
+                                 alt="цифра 01">
                         </div>
-                        <div class="banner__image">
-                            <img src="img/banner/deliveryman.png" alt=""/>
+                        <div class="process-block__item">
+                            <div class="process-item__title">Оценка объема предстоящих работ</div>
+                            <div class="arrow-img-phone">
+                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                            </div>
+                            <div class="process-item__text">
+                                Стоимость переезда зависит от количества комнат, вещей и
+                                мебели.
+                            </div>
                         </div>
                     </div>
-                </section>
-            </main>
-            <footer class="footer">
-                footer
-            </footer>
-        </div>
-    </body>
+                    <div class="process-item">
+                        <div class="item-img">
+                            <img src="img/icons/nums/02.svg" class="item-desktop__img item-tablet__img item-mobile__img"
+                                 alt="цифра 02">
+                        </div>
+                        <div class="process-block__item">
+                            <div class="process-item__title">Упаковка вещей</div>
+                            <div class="arrow-img-phone">
+                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                            </div>
+                            <div class="process-item__text">
+                                Упаковываем вещи в коробки, подписываем. Габаритное и
+                                деликатное, упаковываем отдельно.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="process-item">
+                        <div class="item-img">
+                            <img src="img/icons/nums/03.svg" class="item-desktop__img item-tablet__img item-mobile__img"
+                                 alt="цифра 03">
+                        </div>
+                        <div class="process-block__item">
+                            <div class="process-item__title">Погрузка и транспортировка</div>
+                            <div class="arrow-img-phone">
+                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                            </div>
+                            <div class="process-item__text">
+                                В нашем автопарке имеются машины, подходящие для
+                                мебели любых габаритов.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="process-item">
+                        <div class="item-img">
+                            <img src="img/icons/nums/04.svg" class="item-desktop__img item-tablet__img item-mobile__img"
+                                 alt="цифра 04">
+                        </div>
+                        <div class="process-block__item">
+                            <div class="process-item__title">Распаковка и расстановка мебели</div>
+                            <div class="arrow-img-phone">
+                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                            </div>
+                            <div class="process-item__text">
+                                Опытные грузчики быстро расставят мебель
+                                и уберут мусор от распаковки.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        footer
+    </footer>
+</div>
+</body>
 </html>
