--- a/index.html
+++ b/index.html
@@ -137,6 +137,58 @@
                 </div>
             </div>
         </section>
+        <section class="price">
+            <div class="price__container">
+                <div class="price-text__container">
+                    <h1 class="price__title">Цены</h1>
+                    <h2 class="price__text">Фиксированная стоимость на переезд под ключ</h2>
+                </div>
+                <div class="price-cards__content">
+                    <div class="card">
+                        <div class="card-info">
+                            <h2 class="card__title">1-комнатная кв-ра</h2>
+                            <div class="card-items">
+                                <p class="card-text">1 фургон</p>
+                                <p class="card-text">2 грузчика</p>
+                                <p class="card-text">Переезд за 4 часа</p>
+                            </div>
+                            <h1 class="card-price">70 руб.</h1>
+                            <a class="card-btn">Заказать</a>
+                            <a href="#" class="card-btn-all-prices">Все цены</a>
+                            <hr class="line-all-prices" />
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-info">
+                            <h2 class="card__title">2-комнатная кв-ра</h2>
+                            <div class="card-items">
+                                <p class="card-text">1 фургон - 3 метра</p>
+                                <p class="card-text">2 грузчика</p>
+                                <p class="card-text">Переезд за 4 часа</p>
+                            </div>
+                            <h1 class="card-price">100 руб.</h1>
+                            <a class="card-btn">Заказать</a>
+                            <a href="#" class="card-btn-all-prices">Все цены</a>
+                            <hr class="line-all-prices" />
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-info">
+                            <h2 class="card__title">3-комнатная кв-ра</h2>
+                            <div class="card-items">
+                                <p class="card-text">1 газель - 4 метра</p>
+                                <p class="card-text">2 грузчика</p>
+                                <p class="card-text">Переезд за 6 часа</p>
+                            </div>
+                            <h1 class="card-price">150 руб.</h1>
+                            <a class="card-btn">Заказать</a>
+                            <a href="#" class="card-btn-all-prices">Все цены</a>
+                            <hr class="line-all-prices" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         footer
