--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="process-block__item">
                             <div class="process-item__title">Оценка объема предстоящих работ</div>
                             <div class="arrow-img-phone">
-                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                                <img src="img/icons/arrows/down.svg" alt="стрелка вниз">
                             </div>
                             <div class="process-item__text">
                                 Стоимость переезда зависит от количества комнат, вещей и
@@ -94,7 +94,7 @@
                         <div class="process-block__item">
                             <div class="process-item__title">Упаковка вещей</div>
                             <div class="arrow-img-phone">
-                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                                <img src="img/icons/arrows/down.svg" alt="стрелка вниз">
                             </div>
                             <div class="process-item__text">
                                 Упаковываем вещи в коробки, подписываем. Габаритное и
@@ -110,7 +110,7 @@
                         <div class="process-block__item">
                             <div class="process-item__title">Погрузка и транспортировка</div>
                             <div class="arrow-img-phone">
-                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                                <img src="img/icons/arrows/down.svg" alt="стрелка вниз">
                             </div>
                             <div class="process-item__text">
                                 В нашем автопарке имеются машины, подходящие для
@@ -126,7 +126,7 @@
                         <div class="process-block__item">
                             <div class="process-item__title">Распаковка и расстановка мебели</div>
                             <div class="arrow-img-phone">
-                                <img src="img/icons/arrows/arrow-down.svg" alt="стрелка вниз">
+                                <img src="img/icons/arrows/down.svg" alt="стрелка вниз">
                             </div>
                             <div class="process-item__text">
                                 Опытные грузчики быстро расставят мебель
@@ -185,6 +185,64 @@
                             <a href="#" class="card-btn-all-prices">Все цены</a>
                             <hr class="line-all-prices" />
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="fleet">
+            <div class="fleet__container">
+                <div class="fleet-text__container">
+                    <div class="fleet__title">Автопарк</div>
+                    <div class="fleet__text">10 видов автомобилей от 800 кг до 10 тонн</div>
+                </div>
+                <div class="fleet-select__buttons">
+                    <a class="fleet-btn">Газели</a>
+                    <a class="fleet-btn">Каблуки</a>
+                    <a class="fleet-btn">Грузовики</a>
+                </div>
+                <div class="slider_cards">
+                    <div class="arrow-slider">
+                        <img src="img/icons/arrows/left.svg" alt="Стрелка влево"/>
+                    </div>
+                    <div class="fleet-card__content">
+                        <div class="fleet-card__title">Газель 3 метра</div>
+                        <div class="fleet-card__list">
+                            <div class="fleet-card-item">
+                                <div class="check-icon">&#10004;</div>
+                                <div class="fleet-card__text">Ширина 2 м</div>
+                            </div>
+                            <div class="fleet-card-item">
+                                <div class="check-icon">&#10004;</div>
+                                <div class="fleet-card__text">Высота 2 м</div>
+                            </div>
+                            <div class="fleet-card-item">
+                                <div class="check-icon">&#10004;</div>
+                                <div class="fleet-card__text">Объем 16 м&sup3;</div>
+                            </div>
+                            <div class="fleet-card-item">
+                                <div class="check-icon">&#10004;</div>
+                                <div class="fleet-card__text">Грузоподъемность 1,5 т</div>
+                            </div>
+                            <div class="fleet-card-item__other-view">
+                                <div class="fleet-card__text">Газель 3 метра / 1,5 тонны</div>
+                            </div>
+<!--                            <div class="fleet-card-item__other-view">-->
+<!--                                <div class="fleet-card__text">Каблук 2 метра / 0,8 тонны</div>-->
+<!--                            </div>     -->
+<!--                            <div class="fleet-card-item__other-view">-->
+<!--                                <div class="fleet-card__text">Грузовик 3 метра / 2 тонны</div>-->
+<!--                            </div>-->
+                            <div class="fleet-dots">
+                                <img src="img/icons/fleet/posit-dots.svg" class="fleet-dots__img" alt="">
+                            </div>
+                        </div>
+                        <a class="card-btn">Заказать</a>
+                    </div>
+                        <div class="fleet-card__image">
+                            <img src="img/fleet/gazel.png" class="card-image" alt="Газель"/>
+                        </div>
+                    <div class="arrow-slider">
+                        <img src="img/icons/arrows/right.svg" alt="Стрелка вправо"/>
                     </div>
                 </div>
             </div>
