--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <h1 class="card-price">70 руб.</h1>
                             <a class="card-btn">Заказать</a>
                             <a href="#" class="card-btn-all-prices">Все цены</a>
-                            <hr class="line-all-prices" />
+                            <hr class="line-all-prices"/>
                         </div>
                     </div>
                     <div class="card">
@@ -169,7 +169,7 @@
                             <h1 class="card-price">100 руб.</h1>
                             <a class="card-btn">Заказать</a>
                             <a href="#" class="card-btn-all-prices">Все цены</a>
-                            <hr class="line-all-prices" />
+                            <hr class="line-all-prices"/>
                         </div>
                     </div>
                     <div class="card">
@@ -183,7 +183,7 @@
                             <h1 class="card-price">150 руб.</h1>
                             <a class="card-btn">Заказать</a>
                             <a href="#" class="card-btn-all-prices">Все цены</a>
-                            <hr class="line-all-prices" />
+                            <hr class="line-all-prices"/>
                         </div>
                     </div>
                 </div>
@@ -226,24 +226,89 @@
                             <div class="fleet-card-item__other-view">
                                 <div class="fleet-card__text">Газель 3 метра / 1,5 тонны</div>
                             </div>
-<!--                            <div class="fleet-card-item__other-view">-->
-<!--                                <div class="fleet-card__text">Каблук 2 метра / 0,8 тонны</div>-->
-<!--                            </div>     -->
-<!--                            <div class="fleet-card-item__other-view">-->
-<!--                                <div class="fleet-card__text">Грузовик 3 метра / 2 тонны</div>-->
-<!--                            </div>-->
+                            <!--                            <div class="fleet-card-item__other-view">-->
+                            <!--                                <div class="fleet-card__text">Каблук 2 метра / 0,8 тонны</div>-->
+                            <!--                            </div>     -->
+                            <!--                            <div class="fleet-card-item__other-view">-->
+                            <!--                                <div class="fleet-card__text">Грузовик 3 метра / 2 тонны</div>-->
+                            <!--                            </div>-->
                             <div class="fleet-dots">
                                 <img src="img/icons/fleet/posit-dots.svg" class="fleet-dots__img" alt="">
                             </div>
                         </div>
                         <a class="card-btn">Заказать</a>
                     </div>
-                        <div class="fleet-card__image">
-                            <img src="img/fleet/gazel.png" class="card-image" alt="Газель"/>
-                        </div>
+                    <div class="fleet-card__image">
+                        <img src="img/fleet/gazel.png" class="card-image" alt="Газель"/>
+                    </div>
                     <div class="arrow-slider">
                         <img src="img/icons/arrows/right.svg" alt="Стрелка вправо"/>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="reviews">
+            <div class="reviews__container">
+                <h1 class="reviews__title">Отзывы</h1>
+                <div class="block-comments">
+                    <div class="comment">
+                        <h2 class="comment-name">Ирина</h2>
+                        <div class="comment-info">
+                            <div class="comment-date">24.03.2021</div>
+                            <div class="comment-rate">
+                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд">
+                            </div>
+                        </div>
+                        <p class="comment-text">Обращение к вам за помощью в переезде оставило только положительные
+                            впечатления. Хотелось отметить замечательного водителя газели Алексея. Были трудности с
+                            заездом
+                            во двор, он проявил себя как компетентный
+                            и профессиональный сотрудник, за что ему огромное спасибо.
+                        </p>
+                        <div class="block-read-more">
+                            <a href="#" class="link-read-more">Читать полностью</a>
+                        </div>
+                    </div>
+                    <div class="comment">
+                        <h2 class="comment-name">Светлана Васильевна</h2>
+                        <div class="comment-info">
+                            <div class="comment-date">13.09.2021</div>
+                            <div class="comment-rate">
+                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд">
+                            </div>
+                        </div>
+                        <p class="comment-text">Сегодня ( 13.09.2021 ) мы переехали. Остались очень довольны, несмотря
+                            на то, что к нам опоздали на 1,5 часа. Морально были к этому готовы ( в прошлый переезд в
+                            другой фирме тоже опоздали на час). Водитель заранее позвонил, предупредил, что
+                            задерживается.
+                        </p>
+                        <div class="block-read-more">
+                            <a href="#" class="link-read-more">Читать полностью</a>
+                        </div>
+                    </div>
+                    <div class="comment">
+                        <h2 class="comment-name">Ольга Петрова</h2>
+                        <div class="comment-info">
+                            <div class="comment-date">11.11.2021</div>
+                            <div class="comment-rate">
+                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд">
+                            </div>
+                        </div>
+                        <p class="comment-text">Могу на 100% порекомендовать компанию MOVEE и отметить, что цены
+                            фиксированы, что упрощает расчет. Безо всяких заморочек, в отличии от их конкурентов.
+                            Упаковали все качественно и быстро. Все вещи приехали в сохранности. Особая благодарность
+                            Александру за его отзывчивость и хорошее настроение.
+                        </p>
+                        <div class="block-read-more">
+                            <a href="#" class="link-read-more">Читать полностью</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews-dots">
+                    <img src="img/icons/review/pagination.svg" class="review-dots" alt="пагинация">
+                </div>
+                <div class="review-block__btn">
+                    <a class="review-btn">Все отзывы</a>
                 </div>
             </div>
         </section>
