--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
                             <img src="img/icons/arrows/up.svg" alt="Стрелка вверх">
                         </h2>
                         <div class="additional-services-checkbox">
-                            <input class="additional-input" type="checkbox" id="call-a-measurer" name="call-a-measurer"/>
+                            <input class="additional-input" type="checkbox" id="call-a-measurer"
+                                   name="call-a-measurer"/>
                             <label class="additional-checkbox" for="call-a-measurer">Вызвать замерщика</label>
 
                             <input class="additional-input" type="checkbox" id="pack-fraigle" name="pack-fraigle"/>
@@ -379,7 +380,8 @@
                             <label class="additional-checkbox" for="crane">Кран</label>
                         </div>
                         <div class="additional-services-checkbox">
-                            <input class="additional-input" type="checkbox" id="assembly-furniture" name="assembly-furniture"/>
+                            <input class="additional-input" type="checkbox" id="assembly-furniture"
+                                   name="assembly-furniture"/>
                             <label class="additional-checkbox" for="assembly-furniture">Сборка мебели</label>
 
                             <input class="additional-input" type="checkbox" id="large-items" name="large-items"/>
@@ -392,12 +394,27 @@
                             <div class="form-border"></div>
                             <button type="submit" class="form-btn"></button>
                             <div class="data-processing__checkbox">
-                                <input class="data-processing" type="checkbox" id="data-processing" name="data-processing"/>
-                                <label class="data-processing-label" for="data-processing">Даю согласие на обработку данных</label>
+                                <input class="data-processing" type="checkbox" id="data-processing"
+                                       name="data-processing"/>
+                                <label class="data-processing-label" for="data-processing">Даю согласие на обработку
+                                    данных</label>
                             </div>
                         </div>
                     </div>
                 </form>
+            </div>
+        </section>
+        <section class="map">
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10891.191357972762!2d23.696454392725865!3d52.09199413103011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47210bf0d6c7cb8f%3A0x5d0b2cc4f645f8ca!2z0YPQuy4g0JHRg9C00ZHQvdC90L7Qs9C-IDY0LCDQkdGA0LXRgdGCLCDQkdGA0LXRgdGC0YHQutCw0Y8g0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sby!4v1728120343093!5m2!1sru!2sby"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="map-contacts">
+                <h2 class="contact-city">Брест</h2>
+                <p class="contact-phone">8 (029)-999-12-13</p>
+                <p class="contact-email">hello@movee.ru</p>
+                <div class="contact-line"></div>
             </div>
         </section>
     </main>
