--- a/index.html
+++ b/index.html
@@ -419,7 +419,59 @@
         </section>
     </main>
     <footer class="footer">
-        footer
+        <div class="footer__container">
+            <div class="block-logo-policy">
+                <a href="#" class="footer__logo">MOVING</a>
+                <p class="policy-agreement">Политика конфиденциальнности</p>
+                <p class="personal-info">
+                    Соглашение на обработку персональных данных
+                </p>
+            </div>
+            <div class="footer__nav">
+                <nav class="footer__menu">
+                    <ul class="footer__list">
+                        <li class="footer-item">
+                            <a href="#" class="footer__link">Главная</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="#" class="footer__link">Цены</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="#" class="footer__link">Автопарк</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="#" class="footer__link">Отзывы</a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="#" class="footer__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer__contacts">
+                <div class="footer__btn">
+                    <button class="callback__btn">Обратный звонок</button>
+                </div>
+                <div class="footer__num">
+                    <p class="phone-num">8 (029)-999-12-13</p>
+                    <div class="phone-underline"></div>
+                </div>
+                <div class="social">
+                    <a href="#">
+                        <img class="social-img" src="/img/icons/footer/youtube.svg" alt="ютуб"/>
+                    </a>
+                    <a href="#">
+                        <img class="social-img" src="/img/icons/footer/vk.svg" alt="вк"/>
+                    </a>
+                    <a href="#">
+                        <img class="social-img" src="/img/icons/footer/fb.svg" alt="фейсбук"/>
+                    </a>
+                    <a href="#">
+                        <img class="social-img" src="/img/icons/footer/inst.svg" alt="инстаграм"/>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 </div>
 </body>
