L-12: - add hide additional services

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
                         </div>
                     </div>
                     <div class="additional-services">
-                        <h2 class="label-title">Дополнительные услуги
-                            <img src="img/icons/arrows/up.svg" alt="Стрелка вверх">
+                        <h2 id="additional-service__title" class="additional-services__title">Дополнительные услуги
+                            <img id="arrow-services" src="img/icons/arrows/up.svg" alt="Стрелка вверх">
                         </h2>
                         <div class="additional-services-checkbox">
                             <input class="additional-input" type="checkbox" id="call-a-measurer"
@@ -464,7 +464,7 @@
                         <img class="social-img" src="/img/icons/footer/vk.svg" alt="вк"/>
                     </a>
                     <a href="#">
-                        <img class="social-img" src="/img/icons/footer/fb.svg" alt="фейсбук"/>
+                        <img class="social-img" src="img/icons/footer/fb.svg" alt="фейсбук"/>
                     </a>
                     <a href="#">
                         <img class="social-img" src="/img/icons/footer/inst.svg" alt="инстаграм"/>
@@ -474,5 +474,6 @@
         </div>
     </footer>
 </div>
+<script src="js/script.js"></script>
 </body>
 </html>
