L-12: - add discount time

--- a/index.html
+++ b/index.html
@@ -389,7 +389,9 @@
                         </div>
                     </div>
                     <div class="block-order">
-                        <div class="order-discount-time">05:37:25</div>
+                        <div class="block-time">
+                            <div id="orderDiscountTime" class="order-discount-time">05:37:25</div>
+                        </div>
                         <div class="block-submit-order">
                             <div class="form-border"></div>
                             <button type="submit" class="form-btn"></button>
