--- a/index.html
+++ b/index.html
@@ -12,22 +12,27 @@
 <div class="wrapper">
     <header class="header">
         <div class="header__container">
-            <a href="" class="header__logo">MOVING</a>
-            <div class="header__menu menu">
-                <nav class="menu__body">
+            <div class="header__menu">
+                <a href="" class="header__logo">MOVING</a>
+                <nav id="menu__body" class="menu__body">
+                    <div id="arrowBtn" class="arrow__menu">
+                        <img src="img/icons/arrows/right-side-nav.svg" class="arrow-menu-img" alt="стрелка вправо">
+                    </div>
                     <ul class="menu__list">
+                        <li class="menu__item"><a href="" class="menu__link">Главная</a></li>
                         <li class="menu__item"><a href="" class="menu__link">Цены</a></li>
                         <li class="menu__item"><a href="" class="menu__link">Автопарк</a></li>
                         <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
                         <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
                     </ul>
+                    <div class="header__phone">
+                        <a href="" class="phone__number">8(029)-999-12-13</a>
+                        <div class="phone__number-underline"></div>
+                    </div>
                 </nav>
             </div>
-            <div class="header__phone">
-                <a href="" class="phone__number">8(029)-999-12-13</a>
-            </div>
-            <div class="header__burger">
-                <a href="" class="icon-menu"><span></span></a>
+            <div id="menuBtn" class="header__burger">
+                <div class="icon-menu"><span></span></div>
             </div>
         </div>
     </header>
